render/tests/snapshots/golden_scenarios__scenario@orange_step3.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR                
RRRRRRRRRRRRRRRR
