render/tests/snapshots/golden_scenarios__scenario@race_idle_breathe_peak.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
.                              .
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
.                              .
