render/tests/snapshots/golden_scenarios__scenario@sector_band_double_wave_on_phase.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
.                              .
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
yyyyyyyyyy YYYYYYYYYY yyyyyyyyyy
yyyyyyyyyy YYYYYYYYYY yyyyyyyyyy
