render/tests/snapshots/golden_scenarios__scenario@snap_black_flag_x.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
WW                            WW
WWW                          WWW
 WWW                        WWW 
  WWW                      WWW  
   WWW                    WWW   
    WWW                  WWW    
     WWW                WWW     
      WWW              WWW      
       WWW            WWW       
        WWW          WWW        
         WWW        WWW         
          WWW      WWW          
           WWW    WWW           
            WWW  WWW            
             WWWWWW             
              WWWW              
              WWWW              
             WWWWWW             
            WWW  WWW            
           WWW    WWW           
          WWW      WWW          
         WWW        WWW         
        WWW          WWW        
       WWW            WWW       
      WWW              WWW      
     WWW                WWW     
    WWW                  WWW    
   WWW                    WWW   
  WWW                      WWW  
 WWW                        WWW 
WWW                          WWW
WW                            WW
