render/tests/snapshots/golden_scenarios__scenario@snap_caution_safety_car.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY      WWWWW      WWWWW      YY
YY     WW   WW    WW   WW     YY
YY     WW         WW          YY
YY     WW         WW          YY
YY      WWWWW     WW          YY
YY          WW    WW          YY
YY          WW    WW          YY
YY          WW    WW          YY
YY     WW   WW    WW          YY
YY     WW   WW    WW   WW     YY
YY      WWWWW      WWWWW      YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YY                            YY
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
