render/tests/snapshots/golden_scenarios__scenario@snap_checkered.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
    WWWW    WWWW    WWWW    WWWW
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW    
WWWW    WWWW    WWWW    WWWW
