render/tests/snapshots/golden_scenarios__scenario@snap_green_onset.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
GGGGGGGGGGGGGWWWWWWWGGGGGGGGGGGG
